--- a/index.html
+++ b/index.html
@@ -6,16 +6,21 @@
     <title>Biografía de Amy Winehouse</title>
     <link rel="stylesheet" href="/estilos.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Limelight">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  </head>
 </head>
 <body>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <main>
-        <div>
     <h1 class="titulos">
         Amy Winehouse
     </h1>
 <p>(Londres, 1983 - 2011) Compositora y cantante de soul británica que fue una de las grandes figuras en la historia reciente del género. Dotada de portentosas cualidades vocales que la llevaron a un vertiginoso éxito, Amy Winehouse arrasó en la entrega de los premios Grammy de 2008 al obtener cinco de los seis galardones a los que optaba el segundo álbum de su discografía, Back to black, uno de los mejores discos de la década. Víctima de la adicción a las drogas y al alcohol y de su propia personalidad autodestructiva, la cantante falleció prematuramente tres años después, cuando ya había prácticamente arruinado su carrera.
 </p>
-<img src="https://www.clarin.com/img/2011/08/23/amy-winehouse-duena-de-un___BJxQROR7x_1256x620.jpg" id="imagen1">
+<div class="primeraimagen">
+<img src="https://www.clarin.com/img/2011/08/23/amy-winehouse-duena-de-un___BJxQROR7x_1256x620.jpg" id="imagen1" alt="amy winehouse">
+</div>
 <p>
     A los dieciséis años su novio de entonces, el también cantante Tyler James, hizo llegar al mánager Nick Godwyn una maqueta de la joven promesa. Godwyn la invitó a una audición, y en cuanto la vio supo que tenía oro en las manos. "Era increíble. Conocía bien la vieja escuela y el hip-hop. Era rellenita, tenía fuerza y un estilo único." Un estilo que, cabe añadir, sabía adornar con su barriobajero acento cockney, llamativos tatuajes y una forma provocativa de moverse ante el público.
 </p>
@@ -28,8 +33,8 @@ Frank (titulado así en honor a Frank Sinatra) fue el primer álbum de Winehouse
 <p>
 Muchos dicen que fue Pete Doherty, cantante de The Libertines y compañero de Kate Moss, quien ejerció de nefasto cicerone de la joven por los locales más peligrosos de Camden. En esos años Amy tuvo libre acceso a las drogas y al alcohol. Compartía piso con su primer novio, pero iba adueñándose de ella una fascinación creciente por el problemático Blake, con quien inició un romance. "Necesito tener problemas para sentir mi fuerza creativa", aseguró Amy al respecto. Alternando períodos de anorexia y bulimia, bebiendo cada noche y saliendo sin parar, Amy parecía alimentarse de su propia desgracia para salir adelante. Siendo aún su manager, Nick Godwyn alertó a los padres de la cantante del peligro que corría si no se la alejaba de su desordenado modo de vida. La respuesta de Amy fue una violenta negativa a dejarse ayudar.
 </p>
-<iframe src="https://youtu.be/7CYE0DYIbaw?list=OLAK5uy_lfJI3Nwh2HEfyB5uqGr98AXZpUBFxyvN0" id="imagen2">
-</iframe>
+<video src="./winehouse.mp4" preload="metadata" controls="" style="width:100%; max-width:560px; height:auto; display:block; margin: 20px auto;">
+</video>
 <p>En 2006 volvió a los estudios con una apariencia bien distinta de la de tres años atrás: seis tallas menos y un rostro visiblemente demacrado. Paradójicamente, su talento y su carisma parecían haber crecido. Todos los demonios que hervían en el interior de la artista tuvieron salida en unas letras más oscuras que las del álbum precedente.
 </p>
 <p>Back to black, producido por Mark Ronson y triple disco de platino a las pocas semanas de su aparición, puso de acuerdo a la crítica más severa y al gran público. Arropada con una sobrecogedora producción de carácter retro inteligentemente puesta al día, Amy desgranaba en su mejor disco diez temas compuestos por ella misma. En el álbum se alternan bombazos de tremenda potencia rítmica (Rehab o You know I'm no good) con sutiles baladas de aire Motown (como Me and Mr. Jones).
@@ -38,7 +43,27 @@ Muchos dicen que fue Pete Doherty, cantante de The Libertines y compañero de Ka
 </p>
 <p>El que podría haber sido un excelente año para la redención no fue tal. La muerte de su adorada abuela fue un siniestro presagio. Aunque un nuevo tatuaje que rezaba "Blake" adornaba su pecho, Alex Claire ocupó por nueve meses el corazón de la cantante. Por añadidura, el éxito de Back to black resultó un arma de doble filo. Amy, quien hasta entonces podía mantener con relativa discreción sus excesos, se convirtió de la noche a la mañana en un rostro hiperpopular cuya progresiva degradación retrataban constantemente los paparazzi. Comenzó así su dramático historial de cancelaciones y desplantes. En enero de 2007 apareció completamente borracha en el escenario de la G-A-Y Part y vomitó al terminar el primer tema.
 </p>
-<img src="https://ocdn.eu/images/pulscms/MmM7MDA_/dc18c00e-81a0-45de-8db5-4f2daf66aa9c.jpeg">
+<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="https://ocdn.eu/images/pulscms/MmM7MDA_/dc18c00e-81a0-45de-8db5-4f2daf66aa9c.jpeg" class="d-block w-50" alt="amy winehouse">
+      </div>
+      <div class="carousel-item">
+        <img src="https://phantom-marca.unidadeditorial.es/9d64421dde4b40422625909787423020/resize/1320/f/jpg/assets/multimedia/imagenes/2021/07/23/16270523596938.jpg" class="d-block w-50" alt="amy winehouse">
+      </div>
+      <div class="carousel-item">
+        <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/singer-amy-winehouse-performs-at-the-2007-mtv-europe-awards-news-photo-1656589072.jpg" class="d-block w-50" alt="amy winehouse">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 <p>En mayo de ese mismo año se casó con Blake en Miami y en noviembre obtuvo el premio Artist Choice en los MTV Europe Music Awards. Este éxito no pareció suscitar la ilusión de la cantante, cuya única palabra para los asistentes a la gala fue un escueto "gracias". Hacer callar a Bono durante una rueda de prensa, pedir 47 botellas de whisky por actuación y asegurar tranquilamente a la prensa que "padezco desórdenes alimentarios continuos" eran los típicos comportamientos de una diva en llamas. El ingreso en prisión de Blake por agresión y desacato a la autoridad no facilitó las cosas.
 </p>
 <p>El año 2008 pareció comenzar bien para Amy. La ceremonia de los Grammy fue un nuevo paseo triunfal de la londinense, quien, sin embargo, no pudo asistir a la gala en directo porque le fue denegado el visado. Amy se llevó cinco de los seis premios a los que optaba: mejor álbum vocal de pop, mejor actuación vocal femenina, mejor artista revelación, mejor canción del año (Rehab) y mejor álbum. Pero en julio hubo de ser ingresada en un hospital, se dijo que a causa de un enfisema pulmonar, enfermedad que terminaría con la carrera de cualquier cantante. Aunque su padre desmintió tal noticia, las fotografías captadas por los periodistas a la salida del centro mostraban a una Amy completamente ajada.
@@ -47,7 +72,6 @@ Muchos dicen que fue Pete Doherty, cantante de The Libertines y compañero de Ka
 </p>
 <p>Pero ni el tercer disco ni los hijos habían nunca de llegar. La relación con Blake se deterioró; Amy Winehouse presentó en 2009 una demanda de divorcio y siguió rodando por la pendiente del alcohol y las drogas, protagonizando un escándalo tras otro. En junio de 2009 fue juzgada por agredir a una fan; en agosto de 2010, su conducta en un acto de inaugarición oficiado por el rey de los Zulúes fue vergonzosa; a ello deben sumarse las ocasiones en que, víctima de los paparazzis, aparecieron en la prensa fotos suyas en estado de embriaguez. Ya en 2011, un mes antes de su fallecimiento, se presentó completamente drogada a un concierto en Belgrado, protagonizando un espectáculo bochornoso que obligó a cancelar el resto de la funciones. El 23 de julio de 2011 fue hallada muerta en su apartamento, en el barrio londinense de Camden. Como otras leyendas de la música (Kurt Cobain, Jimi Hendrix o Janis Joplin), tenía 27 años.
 </p>
-</div>
 </main>
 <footer>
     <p>Fernández, Tomás y Tamaro, Elena. «Biografia de Amy Winehouse». En Biografías y Vidas. La enciclopedia biográfica en línea [Internet]. Barcelona, España, 2004. Disponible en https://www.biografiasyvidas.com/biografia/w/winehouse.htm .
